test/contentgrid-testcontainers-k3s/src/main/resources/k3s/manifests/cilium.yaml
apiVersion: helm.cattle.io/v1
kind: HelmChart
metadata:
  name: cilium
  namespace: kube-system
spec:
  repo: https://helm.cilium.io/
  chart: cilium
  version: 1.14.6
  bootstrap: true
  targetNamespace: kube-system
  valuesContent: |-
    operator:
      replicas: 1
---
# coredns cilium-network-policy
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: coredns
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      k8s:io.kubernetes.pod.namespace: kube-system
      k8s:k8s-app: kube-dns
  ingress:
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - kube-apiserver
---
# traefik cilium-network-policy
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  namespace: kube-system
  name: traefik
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: traefik
  ingress:
    - fromEntities:
        - world
        - cluster
  egress:
    - toEntities:
        - cluster
---
# helm-install-traefik cilium-network-policy
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  namespace: kube-system
  name: helm-install-traefik
spec:
  endpointSelector:
    matchLabels:
      batch.kubernetes.io/job-name: helm-install-traefik
  egress:
    - toEntities:
        - kube-apiserver
---
# helm-install-traefik-crd cilium-network-policy
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  namespace: kube-system
  name: helm-install-traefik-crd
spec:
  endpointSelector:
    matchLabels:
      batch.kubernetes.io/job-name: helm-install-traefik-crd
  egress:
    - toEntities:
        - kube-apiserver
---
